fix[storybook]: Remove extra margin from p element when they are first child on text blocks or teaser elements Card: https://app.clickup.com/t/861m3knxm

--- a/src/styles/globals/_text-block.css
+++ b/src/styles/globals/_text-block.css
@@ -107,6 +107,10 @@
     justify-content: flex-end;
 }
 
+.text-block__content > *:first-child {
+    margin-top: 0;
+}
+
 @media screen and (min-width: 768px) {
     /* stylelint-disable-next-line max-line-length */
     :is(.text-block[text-block-media-position*="beside"], .text-block[text-block-media-position*="inside"], .text-block[text-block-media-position*="above"]) .text-block-column {
@@ -170,7 +174,7 @@
         padding-left: var(--text-block-grid-gap);
     }
 
-    .details .text-block__content > *:first-child {
+    .text-block__content > *:first-child {
         margin-top: 0;
     }
 }
